[gd_scene load_steps=34 format=3 uid="uid://dq8qa1lubujes"]

[ext_resource type="Texture2D" uid="uid://2pjko4sa51de" path="res://Sprites/Game/MainMenu/tilemapbackground1.png" id="1_87rgq"]
[ext_resource type="Script" uid="uid://b4siidq26eysu" path="res://Scenes/Game/MainGame/scene_01_outhome.gd" id="1_or06o"]
[ext_resource type="PackedScene" uid="uid://dobmk0ktremmo" path="res://Scenes/Game/MainGame/player.tscn" id="1_vn7wo"]
[ext_resource type="Texture2D" uid="uid://cur5kluc6en22" path="res://Sprites/Game/MainMenu/TileMapIdkForest.png" id="2_iawui"]
[ext_resource type="Texture2D" uid="uid://dunmfgq18mkin" path="res://Sprites/Game/MainMenu/tileset1.png" id="3_iawui"]
[ext_resource type="Texture2D" uid="uid://copsrxy01qh3l" path="res://Sprites/Game/MainMenu/tilest2.png" id="4_n7rcs"]
[ext_resource type="Texture2D" uid="uid://mpn5d21hgj3m" path="res://Sprites/Game/MainMenu/tent.png" id="5_ml5ev"]
[ext_resource type="Texture2D" uid="uid://cevjnbuak1q0k" path="res://Sprites/Game/MainMenu/grasspath.png" id="6_3mq4i"]
[ext_resource type="Shader" uid="uid://do5y8lj8gh15h" path="res://Scenes/Os/vhs_effect.gdshader" id="7_ml5ev"]
[ext_resource type="Script" uid="uid://bcldbqwg0psp8" path="res://Scenes/Game/MainGame/znak.gd" id="10_f200g"]
[ext_resource type="Script" uid="uid://cjdr1y7ut85li" path="res://Scenes/Game/MainGame/fireplace_int.gd" id="10_lpybc"]
[ext_resource type="PackedScene" uid="uid://blr8ysfghsfbr" path="res://Scenes/Game/MainGame/UI/ShowInfo.tscn" id="11_ua1vy"]
[ext_resource type="PackedScene" uid="uid://t2r6ixepci8b" path="res://Scenes/Game/npc/mousenpc.tscn" id="11_wmci3"]
[ext_resource type="Script" uid="uid://dawcgtfsgb5tq" path="res://Scenes/Game/MainGame/house.gd" id="12_cocjl"]
[ext_resource type="Script" uid="uid://brupkk1741scn" path="res://Scenes/Game/MainGame/exit_home.gd" id="13_p112r"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cocjl"]
texture = ExtResource("1_87rgq")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
0:1/0/y_sort_origin = 5
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p112r"]
texture = ExtResource("2_iawui")
0:0/0 = 0
0:0/0/y_sort_origin = 63
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 8, -8, 8, 8, 0, 8, -4, 8)
1:0/0 = 0
1:0/0/y_sort_origin = 63
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, 0, 4, 8, 0, 8, -12, 8, -8, 8, -8, -8)
2:0/0 = 0
2:0/0/y_sort_origin = 13
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 8, 0, 4, 4, 0, 4, -4, 0, -4, 0, -8, 8, -8, 8, 8)
1:1/0 = 0
1:1/0/y_sort_origin = 5
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -4, 0, 0, 0, 4, 4, 8, 0, 8, -12, 8, -8, 8, -8, -8, 4, -8)
2:1/0 = 0
2:1/0/y_sort_origin = 13
0:2/0 = 0
0:2/0/y_sort_origin = 13
1:2/0 = 0
1:2/0/y_sort_origin = 13
2:2/0 = 0
2:2/0/y_sort_origin = 13

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6sycf"]
texture = ExtResource("3_iawui")
0:0/0 = 0
0:0/0/y_sort_origin = 2
1:0/0 = 0
1:0/0/y_sort_origin = 4
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 2, 8, 2, 8, 6, -8, 6)
2:0/0 = 0
2:0/0/y_sort_origin = 4
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 2, 8, 2, 8, 6, -8, 6)
3:0/0 = 0
3:0/0/y_sort_origin = 16
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4, 8, 2, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/y_sort_origin = 5
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4, -8, 2, -2, 6, -2, 8, -8, 8)
2:1/0 = 0
2:1/0/y_sort_origin = 5
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6, 4, 0, 4, 6, 6, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/y_sort_origin = 4
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6, 4, 0, 4, 2, 6, 2, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pjone"]
texture = ExtResource("4_n7rcs")
0:0/0 = 0
0:0/0/y_sort_origin = -18
1:0/0 = 0
1:0/0/y_sort_origin = 5
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.8, 3.2, 1.6, 3.2, 3.2, 3.2, 6.4, 3.2, 6, 8, -4.8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_03mfe"]
texture = ExtResource("5_ml5ev")
0:0/0 = 0
0:0/0/y_sort_origin = 16
1:0/0 = 0
1:0/0/y_sort_origin = 16
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6, 0, 2, 0, 8, 0, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/y_sort_origin = 5
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 2, 0, 6, 0, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uaoft"]
texture = ExtResource("6_3mq4i")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_ml5ev"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cocjl")
sources/1 = SubResource("TileSetAtlasSource_p112r")
sources/2 = SubResource("TileSetAtlasSource_6sycf")
sources/3 = SubResource("TileSetAtlasSource_pjone")
sources/6 = SubResource("TileSetAtlasSource_03mfe")
sources/7 = SubResource("TileSetAtlasSource_uaoft")

[sub_resource type="CircleShape2D" id="CircleShape2D_ua1vy"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wmci3"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cocjl"]
radius = 23.0217

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cocjl"]
size = Vector2(37, 47)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_or06o"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_or06o"]
shader = ExtResource("7_ml5ev")
shader_parameter/crt_curve = 0.015
shader_parameter/crt_scan_line_color = 0.12
shader_parameter/aperture_grille_rate = 0.73
shader_parameter/aparture_grille_cut_rate = 1.0
shader_parameter/rf_switch_esque_blur = 0.75
shader_parameter/white_noise_rate = 0.187

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p112r"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_kuu6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ar44y"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.285129),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7vd77"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.289238),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cmoav"]
_data = {
&"RESET": SubResource("Animation_kuu6k"),
&"fade_in": SubResource("Animation_ar44y"),
&"fade_out": SubResource("Animation_7vd77")
}

[node name="Scene01Outhome" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_or06o")

[node name="player" parent="." instance=ExtResource("1_vn7wo")]
y_sort_enabled = true
position = Vector2(136, 272)

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_ml5ev")
format = 2
layer_0/name = "foregroundb"
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 1, 65536, 1, 2, 65536, 1, 3, 65536, 1, 4, 65536, 1, 5, 65536, 1, 6, 65536, 1, 7, 65536, 1, 8, 65536, 1, 9, 65536, 1, 10, 65536, 1, 11, 65536, 1, 12, 65536, 1, 13, 65536, 1, 14, 65536, 1, 15, 65536, 1, 16, 65536, 1, 17, 65536, 1, 18, 65536, 1, 19, 65536, 1, 65555, 65536, 1, 131091, 65536, 1, 196627, 65536, 1, 262163, 65536, 1, 327699, 65536, 1, 393235, 65536, 1, 458771, 65536, 1, 524307, 65536, 1, 589843, 65536, 1, 655379, 65536, 1, 720915, 65536, 1, 720914, 65536, 1, 720913, 65536, 1, 720912, 65536, 1, 720911, 65536, 1, 720910, 65536, 1, 720909, 65536, 1, 720908, 65536, 1, 720907, 65536, 1, 720906, 0, 1, 720905, 65536, 0, 720904, 65536, 1, 720903, 65536, 1, 720902, 65536, 1, 720901, 65536, 1, 720900, 65536, 1, 720899, 65536, 1, 720898, 65536, 1, 720897, 65536, 1, 720896, 65536, 1, 655360, 65536, 1, 589824, 65536, 1, 524288, 65536, 1, 458752, 65536, 1, 393216, 65536, 1, 327680, 65536, 1, 262144, 65536, 1, 196608, 65536, 1, 131072, 65536, 1, 65536, 65536, 1, 65537, 65536, 1, 65538, 65536, 1, 65539, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 131075, 65536, 1, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589825, 65536, 1, 655361, 65536, 1, 524289, 65536, 1, 458753, 65536, 1, 393217, 65536, 1, 327681, 65536, 1, 589826, 65536, 1, 655362, 65536, 1, 589827, 7, 2, 589828, 65543, 2, 589829, 65543, 2, 655365, 65536, 1, 655366, 65536, 1, 589830, 65543, 2, 655364, 65536, 1, 655363, 65536, 1, 524292, 65543, 1, 458756, 65543, 0, 393220, 65536, 1, 524291, 7, 1, 458755, 7, 0, 393219, 65536, 1, 327683, 65536, 1, 262148, 65536, 1, 196612, 65536, 1, 327684, 65536, 1, 262147, 65536, 1, 196611, 65536, 1, 131076, 65536, 1, 131077, 65536, 1, 131078, 65536, 1, 65542, 65536, 1, 65543, 65536, 1, 65541, 65536, 1, 65544, 65536, 1, 65545, 65536, 1, 65546, 65536, 1, 131080, 65536, 1, 131079, 65536, 1, 196613, 7, 0, 196614, 65543, 0, 196615, 65543, 0, 262150, 65543, 1, 327685, 7, 1, 65540, 65536, 1, 262149, 7, 1, 393221, 7, 2, 458757, 65543, 0, 524293, 65543, 1, 327686, 65543, 1, 393222, 65543, 2, 458758, 65543, 0, 524294, 65543, 1, 262151, 65543, 1, 327687, 65543, 1, 393223, 65543, 2, 458759, 131079, 0, 524295, 131079, 1, 589831, 131079, 2, 655367, 65536, 1, 196616, 65543, 0, 262152, 65543, 1, 327688, 65543, 1, 393224, 65543, 2, 458760, 65536, 1, 524296, 65536, 1, 589832, 0, 0, 655368, 65536, 1, 131081, 65536, 1, 196617, 65543, 0, 262153, 65543, 1, 327689, 65543, 1, 524297, 65536, 0, 589833, 0, 0, 655369, 65536, 0, 131082, 65536, 1, 196618, 131079, 0, 262154, 131079, 1, 327690, 131079, 1, 393226, 131079, 2, 458762, 65536, 1, 524298, 65536, 1, 589834, 0, 0, 655370, 65536, 1, 65547, 65536, 1, 131083, 65536, 1, 196619, 65536, 1, 262155, 65536, 1, 327691, 0, 0, 393227, 65536, 1, 458763, 7, 0, 589835, 7, 1, 655371, 7, 2, 65548, 65536, 1, 131084, 65536, 1, 196620, 65536, 1, 262156, 0, 1, 327692, 0, 0, 393228, 65536, 1, 458764, 65543, 0, 524300, 65543, 1, 589836, 65543, 1, 655372, 65543, 2, 65549, 65536, 1, 131085, 65536, 1, 196621, 0, 1, 262157, 65536, 1, 327693, 65536, 0, 393229, 65536, 0, 458765, 65543, 0, 524301, 65543, 1, 589837, 65543, 1, 655373, 65543, 2, 65550, 65536, 1, 131086, 65536, 1, 196622, 65536, 1, 262158, 65536, 1, 327694, 65536, 1, 393230, 65536, 1, 458766, 65543, 0, 524302, 65543, 1, 589838, 65543, 1, 655374, 65543, 2, 65551, 65536, 1, 131087, 65536, 1, 196623, 65536, 1, 262159, 65536, 1, 327695, 65536, 1, 393231, 65536, 1, 458767, 65543, 0, 524303, 65543, 1, 589839, 65543, 1, 655375, 65543, 2, 65552, 65536, 1, 131088, 65536, 1, 196624, 65536, 1, 262160, 65536, 1, 327696, 65536, 1, 393232, 65536, 1, 458768, 131079, 0, 524304, 131079, 1, 589840, 131079, 1, 655376, 131079, 2, 65553, 65536, 1, 131089, 65536, 1, 196625, 65536, 1, 262161, 65536, 1, 327697, 65536, 1, 393233, 65536, 1, 458769, 65536, 1, 524305, 65536, 1, 589841, 65536, 1, 655377, 65536, 1, 65554, 65536, 1, 131090, 65536, 1, 196626, 65536, 1, 262162, 65536, 1, 327698, 65536, 1, 393234, 65536, 1, 458770, 65536, 1, 524306, 65536, 1, 589842, 65536, 1, 655378, 65536, 1, 393225, 65543, 2, 458761, 65536, 0, 524299, 7, 1, 786432, 65536, 1, 851968, 65536, 1, 917504, 65536, 1, 983040, 65536, 1, 1048576, 65536, 1, 1114112, 65536, 1, 1179648, 65536, 1, 1245184, 65536, 1, 1245185, 65536, 1, 1245186, 65536, 1, 1245187, 65536, 1, 1245188, 65536, 1, 1245189, 65536, 1, 1245190, 65536, 1, 1245191, 65536, 1, 1245192, 65536, 1, 1245194, 65536, 1, 1245195, 65536, 1, 1245196, 65536, 1, 1245197, 65536, 1, 1245198, 65536, 1, 1245199, 65536, 1, 1245200, 65536, 1, 1245201, 65536, 1, 1245202, 65536, 1, 1245203, 65536, 1, 1179667, 65536, 1, 1114131, 65536, 1, 1048595, 65536, 1, 983059, 65536, 1, 917523, 65536, 1, 851986, 65536, 1, 786450, 65536, 1, 786451, 65536, 1, 851987, 65536, 1, 786449, 65536, 1, 786448, 65536, 1, 786447, 65536, 1, 851983, 65536, 1, 851984, 65536, 1, 851985, 65536, 1, 851982, 65536, 1, 851981, 65536, 1, 851980, 65536, 1, 851979, 65536, 1, 851978, 65536, 1, 786433, 65536, 1, 851969, 65536, 1, 917505, 65536, 1, 983041, 65536, 1, 1048577, 65536, 1, 1114113, 65536, 1, 1179649, 65536, 1, 786434, 65536, 1, 851970, 65536, 1, 917506, 65536, 1, 983042, 65536, 1, 1048578, 65536, 1, 1114114, 65536, 1, 1179650, 65536, 1, 786435, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 983043, 65536, 1, 1048579, 65536, 1, 1114115, 65536, 1, 1179651, 65536, 1, 786436, 65536, 1, 851972, 65536, 1, 917508, 65536, 1, 983044, 65536, 1, 1048580, 65536, 1, 1114116, 65536, 1, 1179652, 65536, 1, 786437, 65536, 1, 851973, 65536, 1, 917509, 65536, 1, 983045, 65536, 1, 1048581, 65536, 1, 1114117, 65536, 1, 1179653, 65536, 1, 786438, 65536, 1, 851974, 65536, 1, 917510, 65536, 1, 983046, 65536, 1, 1048582, 65536, 1, 1114118, 65536, 1, 1179654, 65536, 1, 786439, 65536, 1, 851975, 65536, 1, 917511, 65536, 1, 983047, 65536, 1, 1048583, 65536, 1, 1114119, 65536, 1, 1179655, 65536, 1, 786440, 65536, 1, 851976, 65536, 1, 917512, 65536, 1, 983048, 65536, 1, 1048584, 65536, 1, 1114120, 65536, 1, 1179656, 65536, 1, 786441, 65536, 0, 851977, 65536, 0, 917513, 65536, 0, 983049, 65536, 0, 1048585, 65536, 0, 786442, 65536, 1, 917514, 65536, 1, 983050, 65536, 1, 1048586, 65536, 1, 1114122, 65536, 1, 1179658, 65536, 1, 786443, 65536, 1, 917515, 65536, 1, 983051, 65536, 1, 1048587, 65536, 1, 1114123, 65536, 1, 1179659, 65536, 1, 786444, 65536, 1, 917516, 65536, 1, 983052, 65536, 1, 1048588, 65536, 1, 1114124, 65536, 1, 1179660, 65536, 1, 786445, 65536, 1, 917517, 65536, 1, 983053, 65536, 1, 1048589, 65536, 1, 1114125, 65536, 1, 1179661, 65536, 1, 786446, 65536, 1, 917518, 65536, 1, 983054, 65536, 1, 1048590, 65536, 1, 1114126, 65536, 1, 1179662, 65536, 1, 917519, 65536, 1, 983055, 65536, 1, 1048591, 65536, 1, 1114127, 65536, 1, 1179663, 65536, 1, 917520, 65536, 1, 983056, 65536, 1, 1048592, 65536, 1, 1114128, 65536, 1, 1179664, 65536, 1, 917521, 65536, 1, 983057, 65536, 1, 1048593, 65536, 1, 1114129, 65536, 1, 1179665, 65536, 1, 917522, 65536, 1, 983058, 65536, 1, 1048594, 65536, 1, 1114130, 65536, 1, 1179666, 65536, 1, 1114121, 65536, 0, 1179657, 65536, 0, 1245193, 65536, 0, 1310729, 65536, 0)
layer_1/name = "ysort"
layer_1/y_sort_enabled = true
layer_1/navigation_enabled = false
layer_1/tile_data = PackedInt32Array(0, 65537, 0, 65536, 65537, 1, 1, 1, 1, 2, 65537, 1, 65538, 65537, 0, 3, 1, 1, 65539, 1, 0, 4, 65537, 1, 65540, 65537, 0, 5, 1, 1, 65541, 1, 0, 6, 65537, 1, 65542, 65537, 0, 7, 1, 1, 65543, 1, 0, 8, 65537, 1, 65544, 65537, 0, 9, 1, 1, 65545, 1, 0, 10, 65537, 1, 65546, 65537, 0, 11, 1, 1, 65547, 1, 0, 12, 65537, 1, 65548, 65537, 0, 13, 1, 1, 65549, 1, 0, 14, 65537, 1, 65550, 65537, 0, 15, 1, 1, 65551, 1, 0, 16, 65537, 1, 65552, 65537, 0, 17, 1, 1, 18, 65537, 1, 65555, 1, 0, 131090, 65537, 0, 196626, 65537, 1, 131091, 1, 1, 196627, 1, 0, 262162, 65537, 0, 327698, 65537, 1, 262163, 1, 1, 327699, 1, 0, 393234, 65537, 0, 458770, 65537, 1, 393235, 1, 1, 458771, 1, 0, 524306, 65537, 0, 589842, 65537, 1, 524307, 1, 1, 589843, 1, 0, 655378, 65537, 0, 720914, 65537, 1, 655379, 1, 1, 720915, 1, 0, 720895, 1, 0, 786431, 1, 1, 655360, 65537, 0, 720896, 65537, 1, 589823, 1, 0, 655359, 1, 1, 458751, 1, 0, 524287, 1, 1, 393216, 65537, 0, 458752, 65537, 1, 524288, 65537, 0, 589824, 65537, 1, 327679, 1, 0, 393215, 1, 1, 262144, 65537, 0, 327680, 65537, 1, 196607, 1, 0, 262143, 1, 1, 131072, 65537, 0, 196608, 65537, 1, 65535, 1, 0, 131071, 1, 1, -65535, 1, 0, -65534, 65537, 0, -65533, 1, 0, -65532, 65537, 0, -65531, 1, 0, -65530, 65537, 0, -65529, 1, 0, -65528, 65537, 0, -65527, 1, 0, -65526, 65537, 0, -65525, 1, 0, -65524, 65537, 0, -65523, 1, 0, -65522, 65537, 0, -65521, 1, 0, -65520, 65537, 0, -65519, 1, 0, -65518, 65537, 0, 65556, 65537, 0, 131092, 65537, 1, 196628, 65537, 0, 262164, 65537, 1, 327700, 65537, 0, 393236, 65537, 1, 458772, 65537, 0, 524308, 65537, 1, 589844, 65537, 0, 655380, 65537, 1, 786451, 1, 1, 720916, 65537, 0, 786452, 65537, 1, 655377, 1, 0, 720913, 1, 1, 524305, 1, 0, 589841, 1, 1, 393233, 1, 0, 458769, 1, 1, 262161, 1, 0, 327697, 1, 1, 131089, 1, 0, 196625, 1, 1, 131087, 1, 1, 131088, 65537, 1, 131085, 1, 1, 131086, 65537, 1, 131083, 1, 1, 131084, 65537, 1, 131081, 1, 1, 131082, 65537, 1, 131079, 1, 1, 131080, 65537, 1, 131077, 1, 1, 131078, 65537, 1, 131075, 1, 1, 131076, 65537, 1, 65537, 1, 0, 196609, 1, 0, 262145, 1, 1, 196610, 65537, 0, 262146, 65537, 1, 327681, 1, 0, 393217, 1, 1, 327682, 65537, 0, 393218, 65537, 1, 458753, 1, 0, 524289, 1, 1, 458754, 65537, 0, 524290, 65537, 1, 589825, 1, 0, 655361, 1, 1, 589826, 65537, 0, 655362, 65537, 1, 720897, 1, 0, 786433, 1, 1, 720898, 65537, 0, 786434, 65537, 1, 131073, 1, 1, 131074, 65537, 1, 65553, 1, 2, 65554, 65537, 2, 327694, 1, 2, 327695, 65537, 2, 655364, 1, 2, 655365, 65537, 2, 720912, 131073, 2, 262160, 131073, 1, 262148, 131073, 0, 262151, 6, 0, 393232, 131073, 2, 262157, 131073, 2, 196619, 131073, 2, 524292, 131073, 1, 655366, 131073, 0, 720908, 131073, 0, 327683, 131074, 1, 720899, 131074, 1, 327687, 6, 1, 262152, 65542, 0, 327688, 65542, 1, 524298, 131073, 1, 458760, 131073, 1, 393227, 131073, 1, 589837, 3, 0, 589839, 65539, 0, 524300, 65539, 0, 262154, 196610, 0, 327690, 196610, 1, 851967, 1, 0, 917503, 1, 1, 786432, 65537, 0, 851968, 65537, 1, 851969, 1, 0, 917505, 1, 1, 851970, 65537, 0, 917506, 65537, 1, 983039, 1, 0, 1048575, 1, 1, 917504, 65537, 0, 983040, 65537, 1, 983041, 1, 0, 1048577, 1, 1, 983042, 65537, 0, 1048578, 65537, 1, 1114111, 1, 0, 1179647, 1, 1, 1048576, 65537, 0, 1114112, 65537, 1, 1114113, 1, 0, 1179649, 1, 1, 1114114, 65537, 0, 1179650, 65537, 1, 1245183, 1, 0, 1310719, 1, 1, 1179648, 65537, 0, 1245184, 65537, 1, 1245185, 1, 0, 1310721, 1, 1, 1245186, 65537, 0, 1310722, 65537, 1, 1245187, 1, 0, 1310723, 1, 1, 1245188, 65537, 0, 1310724, 65537, 1, 1245189, 1, 0, 1310725, 1, 1, 1245190, 65537, 0, 1310726, 65537, 1, 1245195, 1, 0, 1310731, 1, 1, 1245196, 65537, 0, 1310732, 65537, 1, 1245197, 1, 0, 1310733, 1, 1, 1245198, 65537, 0, 1310734, 65537, 1, 1245199, 1, 0, 1310735, 1, 1, 1245200, 65537, 0, 1310736, 65537, 1, 1245201, 1, 0, 1310737, 1, 1, 1245202, 65537, 0, 1310738, 65537, 1, 1245203, 1, 0, 1310739, 1, 1, 1245204, 65537, 0, 1310740, 65537, 1, 1114131, 1, 0, 1114132, 65537, 0, 983059, 1, 0, 1048595, 1, 1, 983060, 65537, 0, 1048596, 65537, 1, 1179667, 1, 1, 1179668, 65537, 1, 851987, 1, 0, 917523, 1, 1, 851988, 65537, 0, 917524, 65537, 1, 786449, 1, 0, 851985, 1, 1, 786450, 65537, 0, 851986, 65537, 1, 917521, 1, 0, 983057, 1, 1, 917522, 65537, 0, 983058, 65537, 1, 1048593, 1, 0, 1114129, 1, 1, 1048594, 65537, 0, 1114130, 65537, 1, 1114126, 1, 0, 1179662, 1, 1, 1114127, 65537, 0, 1179663, 65537, 1, 1114124, 1, 0, 1179660, 1, 1, 1114125, 65537, 0, 1179661, 65537, 1, 1114122, 1, 0, 1179658, 1, 1, 1114123, 65537, 0, 1179659, 65537, 1, 1114118, 1, 0, 1179654, 1, 1, 1114119, 65537, 0, 1179655, 65537, 1, 1114116, 1, 0, 1179652, 1, 1, 1114117, 65537, 0, 1179653, 65537, 1, 1179651, 131073, 0, 1114115, 131073, 0, 1114128, 131073, 0, 1179664, 131073, 0, 1179665, 131073, 0, 851982, 131073, 0, 851978, 131073, 0, 983048, 196610, 0, 851972, 131073, 0, 1048592, 131073, 0, 917510, 65538, 0, 917511, 131074, 0, 983052, 65538, 0, 983053, 131074, 0, 851974, 2, 0, 983043, 2, 1, 983044, 65538, 1, 983055, 131074, 1, 1048584, 196610, 1)
metadata/_edit_lock_ = true

[node name="znak" type="Area2D" parent="." groups=["interaction"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("10_f200g")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="znak"]
position = Vector2(165, 96)
shape = SubResource("CircleShape2D_ua1vy")
metadata/_edit_lock_ = true

[node name="fireplaceInt" type="Area2D" parent="." groups=["interaction"]]
position = Vector2(216, 155)
collision_layer = 2
collision_mask = 2
script = ExtResource("10_lpybc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="fireplaceInt"]
shape = SubResource("CircleShape2D_wmci3")

[node name="Mousenpc" parent="." groups=["interaction"] instance=ExtResource("11_wmci3")]
position = Vector2(115, 136)

[node name="House" type="Area2D" parent="." groups=["interaction"]]
position = Vector2(128, 82)
collision_layer = 2
collision_mask = 2
script = ExtResource("12_cocjl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="House"]
shape = SubResource("CircleShape2D_cocjl")
metadata/_edit_lock_ = true

[node name="exit_home" type="Area2D" parent="."]
position = Vector2(136, 295)
script = ExtResource("13_p112r")

[node name="exit_dial" type="CollisionShape2D" parent="exit_home"]
position = Vector2(8.5, 18.5)
shape = SubResource("RectangleShape2D_cocjl")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RamkiXD" type="Panel" parent="CanvasLayer"]
offset_left = -16.0
offset_top = -6.0
offset_right = 335.0
offset_bottom = 5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or06o")

[node name="Panel" type="Panel" parent="CanvasLayer/RamkiXD"]
layout_mode = 0
offset_left = -7.0
offset_top = 182.0
offset_right = 344.0
offset_bottom = 193.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or06o")

[node name="Panel2" type="Panel" parent="CanvasLayer/RamkiXD"]
layout_mode = 0
offset_left = 5.0
offset_top = -6.0
offset_right = 19.0
offset_bottom = 188.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or06o")

[node name="Panel" type="Panel" parent="CanvasLayer/RamkiXD/Panel2"]
layout_mode = 0
offset_left = 328.0
offset_top = 10.0
offset_right = 334.0
offset_bottom = 204.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or06o")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_or06o")
offset_right = 321.0
offset_bottom = 181.0
metadata/_edit_lock_ = true

[node name="ShowInfo" parent="CanvasLayer" instance=ExtResource("11_ua1vy")]

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_right = 319.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p112r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Panel"]
libraries = {
&"": SubResource("AnimationLibrary_cmoav")
}

[connection signal="body_entered" from="exit_home" to="." method="_on_exit_home_body_entered"]
[connection signal="body_exited" from="exit_home" to="." method="_on_exit_home_body_exited"]
[connection signal="animation_finished" from="CanvasLayer/Panel/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
